--- a/src/outputs/021422.ipynb
+++ b/src/outputs/021422.ipynb
@@ -159,75 +159,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/mmfs1/gscratch/balazinska/enhaoz/complex_event_video/src/outputs/021422.ipynb Cell 14'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bvscode/mmfs1/gscratch/balazinska/enhaoz/complex_event_video/src/outputs/021422.ipynb#ch0000013vscode-remote?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmotion\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bvscode/mmfs1/gscratch/balazinska/enhaoz/complex_event_video/src/outputs/021422.ipynb#ch0000013vscode-remote?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mIPython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdisplay\u001b[39;00m \u001b[39mimport\u001b[39;00m HTML\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bvscode/mmfs1/gscratch/balazinska/enhaoz/complex_event_video/src/outputs/021422.ipynb#ch0000013vscode-remote?line=5'>6</a>\u001b[0m tracks \u001b[39m=\u001b[39m ingest_mot()\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bvscode/mmfs1/gscratch/balazinska/enhaoz/complex_event_video/src/outputs/021422.ipynb#ch0000013vscode-remote?line=6'>7</a>\u001b[0m pos_ids \u001b[39m=\u001b[39m [\u001b[39m981\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bvscode/mmfs1/gscratch/balazinska/enhaoz/complex_event_video/src/outputs/021422.ipynb#ch0000013vscode-remote?line=7'>8</a>\u001b[0m topk_ids \u001b[39m=\u001b[39m trail_based_match_inference(tracks, pos_ids)\n",
-      "File \u001b[0;32m/mmfs1/gscratch/balazinska/enhaoz/complex_event_video/src/motion.py:412\u001b[0m, in \u001b[0;36mingest_mot\u001b[0;34m()\u001b[0m\n\u001b[1;32m    <a href='file:///mmfs1/gscratch/balazinska/enhaoz/complex_event_video/src/motion.py?line=410'>411</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mingest_mot\u001b[39m():\n\u001b[0;32m--> <a href='file:///mmfs1/gscratch/balazinska/enhaoz/complex_event_video/src/motion.py?line=411'>412</a>\u001b[0m     tracks \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mloadtxt(\u001b[39m\"\u001b[39;49m\u001b[39m/gscratch/balazinska/enhaoz/complex_event_video/data/MOT20/train/MOT20-05/gt/gt.txt\u001b[39;49m\u001b[39m\"\u001b[39;49m, delimiter\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m,\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m    <a href='file:///mmfs1/gscratch/balazinska/enhaoz/complex_event_video/src/motion.py?line=412'>413</a>\u001b[0m     tracks \u001b[39m=\u001b[39m tracks[:, :\u001b[39m6\u001b[39m]\n\u001b[1;32m    <a href='file:///mmfs1/gscratch/balazinska/enhaoz/complex_event_video/src/motion.py?line=413'>414</a>\u001b[0m     tracks[:, \u001b[39m4\u001b[39m] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m tracks[:, \u001b[39m2\u001b[39m]\n",
-      "File \u001b[0;32m/gscratch/balazinska/enhaoz/env/lib/python3.8/site-packages/numpy/lib/npyio.py:1163\u001b[0m, in \u001b[0;36mloadtxt\u001b[0;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows, like)\u001b[0m\n\u001b[1;32m   <a href='file:///gscratch/balazinska/enhaoz/env/lib/python3.8/site-packages/numpy/lib/npyio.py?line=1158'>1159</a>\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m   <a href='file:///gscratch/balazinska/enhaoz/env/lib/python3.8/site-packages/numpy/lib/npyio.py?line=1159'>1160</a>\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mWrong number of columns at line \u001b[39m\u001b[39m{\u001b[39;00mlineno\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   <a href='file:///gscratch/balazinska/enhaoz/env/lib/python3.8/site-packages/numpy/lib/npyio.py?line=1160'>1161</a>\u001b[0m     \u001b[39m# Convert each value according to its column, then pack it\u001b[39;00m\n\u001b[1;32m   <a href='file:///gscratch/balazinska/enhaoz/env/lib/python3.8/site-packages/numpy/lib/npyio.py?line=1161'>1162</a>\u001b[0m     \u001b[39m# according to the dtype's nesting, and store it.\u001b[39;00m\n\u001b[0;32m-> <a href='file:///gscratch/balazinska/enhaoz/env/lib/python3.8/site-packages/numpy/lib/npyio.py?line=1162'>1163</a>\u001b[0m     chunk\u001b[39m.\u001b[39mappend(packer(convert_row(words)))\n\u001b[1;32m   <a href='file:///gscratch/balazinska/enhaoz/env/lib/python3.8/site-packages/numpy/lib/npyio.py?line=1163'>1164</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m chunk:  \u001b[39m# The islice is empty, i.e. we're done.\u001b[39;00m\n\u001b[1;32m   <a href='file:///gscratch/balazinska/enhaoz/env/lib/python3.8/site-packages/numpy/lib/npyio.py?line=1164'>1165</a>\u001b[0m     \u001b[39mbreak\u001b[39;00m\n",
-      "File \u001b[0;32m/gscratch/balazinska/enhaoz/env/lib/python3.8/site-packages/numpy/lib/npyio.py:1142\u001b[0m, in \u001b[0;36mloadtxt.<locals>.convert_row\u001b[0;34m(vals, _conv)\u001b[0m\n\u001b[1;32m   <a href='file:///gscratch/balazinska/enhaoz/env/lib/python3.8/site-packages/numpy/lib/npyio.py?line=1140'>1141</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mconvert_row\u001b[39m(vals, _conv\u001b[39m=\u001b[39mconverters[\u001b[39m0\u001b[39m]):\n\u001b[0;32m-> <a href='file:///gscratch/balazinska/enhaoz/env/lib/python3.8/site-packages/numpy/lib/npyio.py?line=1141'>1142</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m [\u001b[39m*\u001b[39m\u001b[39mmap\u001b[39;49m(_conv, vals)]\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
    "source": [
-    "import sys \n",
-    "sys.path.append(\"/mmfs1/gscratch/balazinska/enhaoz/complex_event_video/src\")\n",
-    "from motion import *\n",
-    "from IPython.display import HTML\n",
+    "## Person stands up\n",
     "\n",
-    "tracks = ingest_mot()\n",
-    "pos_ids = [981]\n",
-    "topk_ids = trail_based_match_inference(tracks, pos_ids)\n",
-    "# print(topk_ids)\n",
-    "query_filepaths = visualize_track_mot(tracks, pos_ids)\n",
-    "results_filepaths = visualize_track_mot(tracks, pos_ids, topk_ids)\n",
-    "print(\"query_filepaths\", query_filepaths)\n",
-    "print(\"results_filepaths\", results_filepaths)\n"
+    "all training samples: \n",
+    "* ResNet 18, finetuning only the final layer, 25 epochs: 67.7%\n",
+    "* ResNet 18, finetuning all layers, 25 epochs: 68.9%\n",
+    "\n",
+    "200 samples: \n",
+    "* ResNet 18, finetuning only the final layer, adam optimizer, 25 epochs: 56.3%\n",
+    "* ResNet 18, finetuning only the final layer, SGD optimizer, 25 epochs: 57.9%\n",
+    "* ResNet 18, finetuning only the final layer, SGD optimizer, random horizontal flip, 25 epochs: 58.8%\n",
+    "\n",
+    "all training samples; refined: \n",
+    "* ResNet 18, finetuning only the final layer, random horizontal flip, 25 epochs: 72.5%\n",
+    "* ResNet 18, finetuning all layers, random horizontal flip, 25 epochs: 82.2%\n",
+    "\n",
+    "200 samples; refined: \n",
+    "* ResNet 18, finetuning only the final layer, random horizontal flip, 25 epochs: 63.8+/-3.1%\n",
+    "* ResNet 18, finetuning all layers, random horizontal flip, 25 epochs: 67.9+/-4.2%\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "530e70a2bef1421a915ad2abec0bd1ec",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "GridspecLayout(children=(Output(layout=Layout(grid_area='widget001')), Output(layout=Layout(grid_area='widget0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "from ipywidgets import Output, GridspecLayout\n",
-    "from IPython import display\n",
+    "## VOCAL\n",
+    "Each experiment repeated 20 times \n",
     "\n",
-    "query_filepaths = ['/mmfs1/gscratch/balazinska/enhaoz/complex_event_video/tmp/track_mot/000001.mp4', '/mmfs1/gscratch/balazinska/enhaoz/complex_event_video/tmp/track_mot/000002.mp4']\n",
-    "grid = GridspecLayout(1, len(query_filepaths))\n",
+    "* Original \n",
     "\n",
-    "for i, filepath in enumerate(query_filepaths):\n",
-    "    out = Output()\n",
-    "    with out:\n",
-    "        display.display(display.Video(filepath, embed=True))\n",
-    "    grid[0, i] = out\n",
+    "| # training data | 10  | 20    | 50    | 100   | 150   | 200   | All (6980) |\n",
+    "| ---           | ---   | ---   | ---   | ---   | ---   | ---   | ---   |\n",
+    "| acc           | 0.533 | 0.564 | 0.648 | 0.695 | 0.715 | 0.730 | 0.780 |\n",
+    "| balanced_acc  | 0.533 | 0.564 | 0.648 | 0.695 | 0.715 | 0.730 | 0.780 |\n",
+    "| f1            | 0.539 | 0.573 | 0.658 | 0.704 | 0.725 | 0.740 | 0.781 |\n",
+    "|precision      | 0.527 | 0.557 | 0.639 | 0.684 | 0.699 | 0.713 | 0.777 |\n",
+    "|recall         | 0.570 | 0.606 | 0.689 | 0.732 | 0.757 | 0.773 | 0.785 |\n",
+    "| training time | 0.078 | 0.078 | 0.080 | 0.084 | 0.089 | 0.094 | 0.777 |\n",
     "\n",
-    "grid"
+    "* Refined\n",
+    "\n",
+    "| # training data | 10  | 20    | 50    | 100   | 150   | 200   | All (3504) |\n",
+    "| ---           | ---   | ---   | ---   | ---   | ---   | ---   | ---   |\n",
+    "| acc           | 0.544 | 0.638 | 0.680 | 0.697 | 0.740 | 0.751 | 0.800 |\n",
+    "| balanced_acc  | 0.544 | 0.638 | 0.680 | 0.697 | 0.740 | 0.751 | 0.800 |\n",
+    "| f1            | 0.556 | 0.677 | 0.699 | 0.706 | 0.758 | 0.763 | 0.793 |\n",
+    "|precision      | 0.535 | 0.614 | 0.666 | 0.685 | 0.713 | 0.729 | 0.823 |\n",
+    "|recall         | 0.612 | 0.765 | 0.751 | 0.735 | 0.814 | 0.803 | 0.764 |\n",
+    "| training time | 0.081 | 0.080 | 0.083 | 0.087 | 0.091 | 0.095 | 0.405 |\n",
+    "\n"
    ]
   }
  ],
