update dsl notations

--- a/experiments/analysis/get_runtime_f1_0.9.ipynb
+++ b/experiments/analysis/get_runtime_f1_0.9.ipynb
@@ -15,9 +15,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "046ed599",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -84,15 +82,15 @@
    "source": [
     "# PATSQL\n",
     "# open json file\n",
-    "queries = [\"Conjunction(Near_1(o0, o1), BottomQuadrant(o0))\", \n",
-    "           \"Far_3(o0, o1); Near_1(o0, o1); Far_3(o0, o1)\", \n",
-    "           \"Far_3(o0, o1); Conjunction(Near_1(o0, o1), Behind(o0, o1))\",\n",
-    "          \"Far_3(o0, o1); Conjunction(Conjunction(Near_1(o0, o1), LeftQuadrant(o0)), Behind(o0, o1))\",\n",
-    "          \"Conjunction(FrontOf(o0, o1), TopQuadrant(o0))\",\n",
-    "           \"Near_1(o0, o1); Far_3(o0, o1)\", \n",
-    "           \"Conjunction(Conjunction(Near_1(o0, o1), LeftQuadrant(o0)), Behind(o0, o1))\",\n",
-    "           \"Conjunction(Far_3(o0, o1), BottomQuadrant(o0)); Near_1(o0, o1)\",\n",
-    "           \"Conjunction(Far_3(o0, o1), LeftQuadrant(o0)); Conjunction(Near_1(o0, o1), LeftQuadrant(o0))\"]\n",
+    "queries = [\"(BottomQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"Far_3.0(o0, o1); Near_1.0(o0, o1); Far_3.0(o0, o1)\",\n",
+    "            \"Far_3.0(o0, o1); (Behind(o0, o1), Near_1.0(o0, o1))\",\n",
+    "            \"Far_3.0(o0, o1); (Behind(o0, o1), LeftQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"(FrontOf(o0, o1), TopQuadrant(o0))\",\n",
+    "            \"Near_1.0(o0, o1); Far_3.0(o0, o1)\",\n",
+    "            \"(Behind(o0, o1), LeftQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"(BottomQuadrant(o0), Far_3.0(o0, o1)); Near_1.0(o0, o1)\",\n",
+    "            \"(Far_3.0(o0, o1), LeftQuadrant(o0)); (LeftQuadrant(o0), Near_1.0(o0, o1))\"]\n",
     "for query in queries:\n",
     "    print(query)\n",
     "    with open('/gscratch/balazinska/enhaoz/complex_event_video/src/quivr/outputs/without_duration-sampling_rate_4/stats/PATSQL/{}.json'.format(query)) as f:\n",
@@ -118,9 +116,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "1932c131",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -176,15 +172,15 @@
    ],
    "source": [
     "# Quivr\n",
-    "queries = [\"Conjunction(Near_1(o0, o1), BottomQuadrant(o0))\", \n",
-    "           \"Far_3(o0, o1); Near_1(o0, o1); Far_3(o0, o1)\", \n",
-    "           \"Far_3(o0, o1); Conjunction(Near_1(o0, o1), Behind(o0, o1))\",\n",
-    "          \"Far_3(o0, o1); Conjunction(Conjunction(Near_1(o0, o1), LeftQuadrant(o0)), Behind(o0, o1))\",\n",
-    "          \"Conjunction(FrontOf(o0, o1), TopQuadrant(o0))\",\n",
-    "           \"Near_1(o0, o1); Far_3(o0, o1)\", \n",
-    "           \"Conjunction(Conjunction(Near_1(o0, o1), LeftQuadrant(o0)), Behind(o0, o1))\",\n",
-    "           \"Conjunction(Far_3(o0, o1), BottomQuadrant(o0)); Near_1(o0, o1)\",\n",
-    "           \"Conjunction(Far_3(o0, o1), LeftQuadrant(o0)); Conjunction(Near_1(o0, o1), LeftQuadrant(o0))\"]\n",
+    "queries = [\"queries = [\"(BottomQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"Far_3.0(o0, o1); Near_1.0(o0, o1); Far_3.0(o0, o1)\",\n",
+    "            \"Far_3.0(o0, o1); (Behind(o0, o1), Near_1.0(o0, o1))\",\n",
+    "            \"Far_3.0(o0, o1); (Behind(o0, o1), LeftQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"(FrontOf(o0, o1), TopQuadrant(o0))\",\n",
+    "            \"Near_1.0(o0, o1); Far_3.0(o0, o1)\",\n",
+    "            \"(Behind(o0, o1), LeftQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"(BottomQuadrant(o0), Far_3.0(o0, o1)); Near_1.0(o0, o1)\",\n",
+    "            \"(Far_3.0(o0, o1), LeftQuadrant(o0)); (LeftQuadrant(o0), Near_1.0(o0, o1))\"]\"]\n",
     "for query in queries:\n",
     "    print(query)\n",
     "    result_time = []\n",
@@ -266,15 +262,15 @@
    ],
    "source": [
     "# VOCAL\n",
-    "queries = [\"Conjunction(Near_1(o0, o1), BottomQuadrant(o0))\", \n",
-    "           \"Far_3(o0, o1); Near_1(o0, o1); Far_3(o0, o1)\", \n",
-    "           \"Far_3(o0, o1); Conjunction(Near_1(o0, o1), Behind(o0, o1))\",\n",
-    "          \"Far_3(o0, o1); Conjunction(Conjunction(Near_1(o0, o1), LeftQuadrant(o0)), Behind(o0, o1))\",\n",
-    "          \"Conjunction(FrontOf(o0, o1), TopQuadrant(o0))\",\n",
-    "           \"Near_1(o0, o1); Far_3(o0, o1)\", \n",
-    "           \"Conjunction(Conjunction(Near_1(o0, o1), LeftQuadrant(o0)), Behind(o0, o1))\",\n",
-    "           \"Conjunction(Far_3(o0, o1), BottomQuadrant(o0)); Near_1(o0, o1)\",\n",
-    "           \"Conjunction(Far_3(o0, o1), LeftQuadrant(o0)); Conjunction(Near_1(o0, o1), LeftQuadrant(o0))\"]\n",
+    "queries = [\"(BottomQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"Far_3.0(o0, o1); Near_1.0(o0, o1); Far_3.0(o0, o1)\",\n",
+    "            \"Far_3.0(o0, o1); (Behind(o0, o1), Near_1.0(o0, o1))\",\n",
+    "            \"Far_3.0(o0, o1); (Behind(o0, o1), LeftQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"(FrontOf(o0, o1), TopQuadrant(o0))\",\n",
+    "            \"Near_1.0(o0, o1); Far_3.0(o0, o1)\",\n",
+    "            \"(Behind(o0, o1), LeftQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"(BottomQuadrant(o0), Far_3.0(o0, o1)); Near_1.0(o0, o1)\",\n",
+    "            \"(Far_3.0(o0, o1), LeftQuadrant(o0)); (LeftQuadrant(o0), Near_1.0(o0, o1))\"]\n",
     "for query in queries:\n",
     "    print(query)\n",
     "    with open('/gscratch/balazinska/enhaoz/complex_event_video/src/quivr/outputs/without_duration-sampling_rate_4/stats/vocal_postgres-topk/{}.json'.format(query)) as f:\n",
@@ -357,15 +353,15 @@
    "source": [
     "# Quivr\n",
     "# normal trajectory pairs queries\n",
-    "queries = [\"Conjunction(Near_1(o0, o1), BottomQuadrant(o0))\", \n",
-    "           \"Far_3(o0, o1); Near_1(o0, o1); Far_3(o0, o1)\", \n",
-    "           \"Far_3(o0, o1); Conjunction(Near_1(o0, o1), Behind(o0, o1))\",\n",
-    "          \"Far_3(o0, o1); Conjunction(Conjunction(Near_1(o0, o1), LeftQuadrant(o0)), Behind(o0, o1))\",\n",
-    "          \"Conjunction(FrontOf(o0, o1), TopQuadrant(o0))\",\n",
-    "           \"Near_1(o0, o1); Far_3(o0, o1)\", \n",
-    "           \"Conjunction(Conjunction(Near_1(o0, o1), LeftQuadrant(o0)), Behind(o0, o1))\",\n",
-    "           \"Conjunction(Far_3(o0, o1), BottomQuadrant(o0)); Near_1(o0, o1)\",\n",
-    "           \"Conjunction(Far_3(o0, o1), LeftQuadrant(o0)); Conjunction(Near_1(o0, o1), LeftQuadrant(o0))\"]\n",
+    "queries = [\"(BottomQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"Far_3.0(o0, o1); Near_1.0(o0, o1); Far_3.0(o0, o1)\",\n",
+    "            \"Far_3.0(o0, o1); (Behind(o0, o1), Near_1.0(o0, o1))\",\n",
+    "            \"Far_3.0(o0, o1); (Behind(o0, o1), LeftQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"(FrontOf(o0, o1), TopQuadrant(o0))\",\n",
+    "            \"Near_1.0(o0, o1); Far_3.0(o0, o1)\",\n",
+    "            \"(Behind(o0, o1), LeftQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"(BottomQuadrant(o0), Far_3.0(o0, o1)); Near_1.0(o0, o1)\",\n",
+    "            \"(Far_3.0(o0, o1), LeftQuadrant(o0)); (LeftQuadrant(o0), Near_1.0(o0, o1))\"]\n",
     "for query in queries:\n",
     "    print(query)\n",
     "    result_time = []\n",
@@ -394,9 +390,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "fb2974f1",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -452,15 +446,15 @@
    ],
    "source": [
     "# VOCAL\n",
-    "queries = [\"Conjunction(Near_1(o0, o1), BottomQuadrant(o0))\", \n",
-    "           \"Far_3(o0, o1); Near_1(o0, o1); Far_3(o0, o1)\", \n",
-    "           \"Far_3(o0, o1); Conjunction(Near_1(o0, o1), Behind(o0, o1))\",\n",
-    "          \"Far_3(o0, o1); Conjunction(Conjunction(Near_1(o0, o1), LeftQuadrant(o0)), Behind(o0, o1))\",\n",
-    "          \"Conjunction(FrontOf(o0, o1), TopQuadrant(o0))\",\n",
-    "           \"Near_1(o0, o1); Far_3(o0, o1)\", \n",
-    "           \"Conjunction(Conjunction(Near_1(o0, o1), LeftQuadrant(o0)), Behind(o0, o1))\",\n",
-    "           \"Conjunction(Far_3(o0, o1), BottomQuadrant(o0)); Near_1(o0, o1)\",\n",
-    "           \"Conjunction(Far_3(o0, o1), LeftQuadrant(o0)); Conjunction(Near_1(o0, o1), LeftQuadrant(o0))\"]\n",
+    "queries = [\"(BottomQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"Far_3.0(o0, o1); Near_1.0(o0, o1); Far_3.0(o0, o1)\",\n",
+    "            \"Far_3.0(o0, o1); (Behind(o0, o1), Near_1.0(o0, o1))\",\n",
+    "            \"Far_3.0(o0, o1); (Behind(o0, o1), LeftQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"(FrontOf(o0, o1), TopQuadrant(o0))\",\n",
+    "            \"Near_1.0(o0, o1); Far_3.0(o0, o1)\",\n",
+    "            \"(Behind(o0, o1), LeftQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"(BottomQuadrant(o0), Far_3.0(o0, o1)); Near_1.0(o0, o1)\",\n",
+    "            \"(Far_3.0(o0, o1), LeftQuadrant(o0)); (LeftQuadrant(o0), Near_1.0(o0, o1))\"]\n",
     "for query in queries:\n",
     "    print(query)\n",
     "    with open('/gscratch/balazinska/enhaoz/complex_event_video/src/quivr/outputs/trajectories_handwritten/stats/vocal_postgres-topk/{}.json'.format(query)) as f:\n",
@@ -604,15 +598,15 @@
    "source": [
     "# NEW: number of queries explored & number of predictions\n",
     "# Quivr \n",
-    "queries = [\"Conjunction(Near_1(o0, o1), BottomQuadrant(o0))\", \n",
-    "           \"Far_3(o0, o1); Near_1(o0, o1); Far_3(o0, o1)\", \n",
-    "           \"Far_3(o0, o1); Conjunction(Near_1(o0, o1), Behind(o0, o1))\",\n",
-    "          \"Far_3(o0, o1); Conjunction(Conjunction(Near_1(o0, o1), LeftQuadrant(o0)), Behind(o0, o1))\",\n",
-    "          \"Conjunction(FrontOf(o0, o1), TopQuadrant(o0))\",\n",
-    "           \"Near_1(o0, o1); Far_3(o0, o1)\", \n",
-    "           \"Conjunction(Conjunction(Near_1(o0, o1), LeftQuadrant(o0)), Behind(o0, o1))\",\n",
-    "           \"Conjunction(Far_3(o0, o1), BottomQuadrant(o0)); Near_1(o0, o1)\",\n",
-    "           \"Conjunction(Far_3(o0, o1), LeftQuadrant(o0)); Conjunction(Near_1(o0, o1), LeftQuadrant(o0))\"]\n",
+    "queries = [\"(BottomQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"Far_3.0(o0, o1); Near_1.0(o0, o1); Far_3.0(o0, o1)\",\n",
+    "            \"Far_3.0(o0, o1); (Behind(o0, o1), Near_1.0(o0, o1))\",\n",
+    "            \"Far_3.0(o0, o1); (Behind(o0, o1), LeftQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"(FrontOf(o0, o1), TopQuadrant(o0))\",\n",
+    "            \"Near_1.0(o0, o1); Far_3.0(o0, o1)\",\n",
+    "            \"(Behind(o0, o1), LeftQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"(BottomQuadrant(o0), Far_3.0(o0, o1)); Near_1.0(o0, o1)\",\n",
+    "            \"(Far_3.0(o0, o1), LeftQuadrant(o0)); (LeftQuadrant(o0), Near_1.0(o0, o1))\"]\n",
     "for query in queries:\n",
     "    print(query)\n",
     "    queries_count_list = []\n",
@@ -707,15 +701,15 @@
    "source": [
     "# number of queries explored & number of predictions\n",
     "# VOCAL\n",
-    "queries = [\"Conjunction(Near_1(o0, o1), BottomQuadrant(o0))\", \n",
-    "           \"Far_3(o0, o1); Near_1(o0, o1); Far_3(o0, o1)\", \n",
-    "           \"Far_3(o0, o1); Conjunction(Near_1(o0, o1), Behind(o0, o1))\",\n",
-    "          \"Far_3(o0, o1); Conjunction(Conjunction(Near_1(o0, o1), LeftQuadrant(o0)), Behind(o0, o1))\",\n",
-    "          \"Conjunction(FrontOf(o0, o1), TopQuadrant(o0))\",\n",
-    "           \"Near_1(o0, o1); Far_3(o0, o1)\", \n",
-    "           \"Conjunction(Conjunction(Near_1(o0, o1), LeftQuadrant(o0)), Behind(o0, o1))\",\n",
-    "           \"Conjunction(Far_3(o0, o1), BottomQuadrant(o0)); Near_1(o0, o1)\",\n",
-    "           \"Conjunction(Far_3(o0, o1), LeftQuadrant(o0)); Conjunction(Near_1(o0, o1), LeftQuadrant(o0))\"]\n",
+    "queries = [\"(BottomQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"Far_3.0(o0, o1); Near_1.0(o0, o1); Far_3.0(o0, o1)\",\n",
+    "            \"Far_3.0(o0, o1); (Behind(o0, o1), Near_1.0(o0, o1))\",\n",
+    "            \"Far_3.0(o0, o1); (Behind(o0, o1), LeftQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"(FrontOf(o0, o1), TopQuadrant(o0))\",\n",
+    "            \"Near_1.0(o0, o1); Far_3.0(o0, o1)\",\n",
+    "            \"(Behind(o0, o1), LeftQuadrant(o0), Near_1.0(o0, o1))\",\n",
+    "            \"(BottomQuadrant(o0), Far_3.0(o0, o1)); Near_1.0(o0, o1)\",\n",
+    "            \"(Far_3.0(o0, o1), LeftQuadrant(o0)); (LeftQuadrant(o0), Near_1.0(o0, o1))\"]\n",
     "for query in queries:\n",
     "    print(query)\n",
     "    with open('/gscratch/balazinska/enhaoz/complex_event_video/src/quivr/outputs/trajectories_handwritten/stats/vocal_postgres-topk/{}.json'.format(query)) as f:\n",
@@ -773,8 +767,8 @@
     "# VOCAL\n",
     "# TQ1D-TQ3D\n",
     "queries = [\"Duration(Far_3(o0, o1), 5); Near_1(o0, o1); Far_3(o0, o1)\",\n",
-    "           \"Duration(LeftOf(o0, o1), 5); Conjunction(Near_1(o0, o1), TopQuadrant(o0)); Duration(RightOf(o0, o1), 5)\",\n",
-    "           \"Duration(Conjunction(FrontOf(o0, o1), LeftQuadrant(o0)), 15); Duration(Conjunction(Conjunction(LeftQuadrant(o0), RightOf(o0, o1)), TopQuadrant(o0)), 5)\"\n",
+    "            \"Duration(LeftOf(o0, o1), 5); (Near_1.0(o0, o1), TopQuadrant(o0)); Duration(RightOf(o0, o1), 5)\",\n",
+    "            \"Duration((FrontOf(o0, o1), LeftQuadrant(o0)), 15); Duration((LeftQuadrant(o0), RightOf(o0, o1), TopQuadrant(o0)), 5)\"\n",
     "          ]\n",
     "for query in queries:\n",
     "    print(query)\n",
@@ -825,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
