--- a/experiments/analysis/user_study_queries.ipynb
+++ b/experiments/analysis/user_study_queries.ipynb
@@ -22,9 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -60,12 +58,12 @@
    "source": [
     "def plot_scene_graph(init_example, bw, pool_size):\n",
     "    queries = [\n",
-    "        \"Conjunction(Conjunction(Color_red(o0), Far_3(o0, o1)), Shape_cylinder(o1)); Near_1(o0, o1)\",\n",
-    "        \"Conjunction(Conjunction(Color_red(o0), Far_3(o0, o1)), Shape_cylinder(o1)); Conjunction(Conjunction(Near_1(o0, o1), RightQuadrant(o2)), TopQuadrant(o2))\",\n",
-    "        \"Duration(Conjunction(Conjunction(Color_red(o0), Far_3(o0, o1)), Shape_cylinder(o1)), 25); Conjunction(Conjunction(Near_1(o0, o1), RightQuadrant(o2)), TopQuadrant(o2))\",\n",
-    "        \"Conjunction(Conjunction(Conjunction(Behind(o0, o1), BottomQuadrant(o1)), Color_purple(o0)), material_metal(o0))\",\n",
-    "        \"Conjunction(Conjunction(Conjunction(Behind(o0, o1), BottomQuadrant(o1)), Color_purple(o0)), material_metal(o0)); TopQuadrant(o1)\",\n",
-    "        \"Conjunction(Conjunction(Conjunction(Behind(o0, o1), BottomQuadrant(o1)), Color_purple(o0)), material_metal(o0)); TopQuadrant(o1); Duration(Conjunction(BottomQuadrant(o2), RightQuadrant(o2)), 25)\"\n",
+    "        \"(Color_red(o0), Far_3.0(o0, o1), Shape_cylinder(o1)); Near_1.0(o0, o1)\",\n",
+    "        \"(Color_red(o0), Far_3.0(o0, o1), Shape_cylinder(o1)); (Near_1.0(o0, o1), RightQuadrant(o2), TopQuadrant(o2))\",\n",
+    "        \"Duration((Color_red(o0), Far_3.0(o0, o1), Shape_cylinder(o1)), 25); (Near_1.0(o0, o1), RightQuadrant(o2), TopQuadrant(o2))\",\n",
+    "        \"(Behind(o0, o1), BottomQuadrant(o1), Color_purple(o0), material_metal(o0))\",\n",
+    "        \"(Behind(o0, o1), BottomQuadrant(o1), Color_purple(o0), material_metal(o0)); TopQuadrant(o1)\",\n",
+    "        \"(Behind(o0, o1), BottomQuadrant(o1), Color_purple(o0), material_metal(o0)); TopQuadrant(o1); Duration((BottomQuadrant(o2), RightQuadrant(o2)), 25)\"\n",
     "    ]\n",
     "    pool_sizes = [25, 50, 100]\n",
     "    init_examples = [10, 15]\n",
@@ -191,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
@@ -200,5 +198,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
