--- a/experiments/analysis/warsaw.ipynb
+++ b/experiments/analysis/warsaw.ipynb
@@ -22,9 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -214,19 +212,19 @@
    "source": [
     "def plot_scene_graph(budgets):\n",
     "    query_strs = [\n",
-    "        \"Conjunction(Conjunction(DistanceSmall_100(o0, o1), Eastward2(o0)), Eastward2(o1))\",\n",
-    "        \"Conjunction(Conjunction(DistanceSmall_100(o0, o1), Eastward3(o0)), Eastward3(o1))\",\n",
-    "        \"Conjunction(Conjunction(DistanceSmall_100(o0, o1), Eastward4(o0)), Eastward4(o1))\",\n",
-    "        \"Conjunction(Eastward2(o0), HighAccel_2(o0)); Conjunction(Eastward2(o1), HighAccel_2(o1))\",\n",
-    "        \"Conjunction(Eastward3(o0), HighAccel_2(o0)); Conjunction(Eastward3(o1), HighAccel_2(o1))\",\n",
-    "        \"Conjunction(Eastward4(o0), HighAccel_2(o0)); Conjunction(Eastward4(o1), HighAccel_2(o1))\",\n",
-    "        \"Conjunction(Southward1Upper(o0), Westward2(o1)); Conjunction(Westward2(o0), Westward2(o1))\",\n",
-    "        \"Conjunction(Eastward2(o0), Eastward4(o1)); Conjunction(Eastward2(o0), Eastward3(o1))\",\n",
-    "        \"Conjunction(Eastward2(o1), Eastward4(o0)); Conjunction(Eastward2(o1), Eastward3(o0))\",\n",
-    "        \"Duration(Conjunction(Conjunction(DistanceSmall_100(o0, o1), Eastward2(o1)), Eastward3(o0)), 5)\",\n",
-    "        \"Duration(Conjunction(Conjunction(DistanceSmall_100(o0, o1), Eastward3(o1)), Eastward4(o0)), 5)\",\n",
-    "        \"Duration(Conjunction(Conjunction(Eastward2(o1), Eastward3(o0)), Faster_1.5(o0, o1)), 5)\",\n",
-    "        \"Duration(Conjunction(Conjunction(Eastward3(o1), Eastward4(o0)), Faster_1.5(o0, o1)), 5)\"\n",
+    "        \"(DistanceSmall_100.0(o0, o1), Eastward2(o0), Eastward2(o1))\",\n",
+    "        \"(DistanceSmall_100.0(o0, o1), Eastward3(o0), Eastward3(o1))\",\n",
+    "        \"(DistanceSmall_100.0(o0, o1), Eastward4(o0), Eastward4(o1))\",\n",
+    "        \"(Eastward2(o0), HighAccel_2.0(o0)); (Eastward2(o1), HighAccel_2.0(o1))\",\n",
+    "        \"(Eastward3(o0), HighAccel_2.0(o0)); (Eastward3(o1), HighAccel_2.0(o1))\",\n",
+    "        \"(Eastward4(o0), HighAccel_2.0(o0)); (Eastward4(o1), HighAccel_2.0(o1))\",\n",
+    "        \"(Southward1Upper(o0), Westward2(o1)); (Westward2(o0), Westward2(o1))\",\n",
+    "        \"(Eastward2(o0), Eastward4(o1)); (Eastward2(o0), Eastward3(o1))\",\n",
+    "        \"(Eastward2(o1), Eastward4(o0)); (Eastward2(o1), Eastward3(o0))\",\n",
+    "        \"Duration((DistanceSmall_100.0(o0, o1), Eastward2(o1), Eastward3(o0)), 5)\",\n",
+    "        \"Duration((DistanceSmall_100.0(o0, o1), Eastward3(o1), Eastward4(o0)), 5)\",\n",
+    "        \"Duration((Eastward2(o1), Eastward3(o0), Faster_1.5(o0, o1)), 5)\",\n",
+    "        \"Duration((Eastward3(o1), Eastward4(o0), Faster_1.5(o0, o1)), 5)\"\n",
     "    ]\n",
     "    \n",
     "    fig, axs = plt.subplots(len(budgets), 2, figsize = (12, 2*len(budgets))) \n",
@@ -469,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
@@ -478,5 +476,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
